# h5wasm-plugins

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  h5pl.patch  index.mjs  package-lock.json  package.json
.github/workflows/: main.yml  test-blosc.yml  test-blosc2.yml  test-bshuf.yml  test-bz2.yml  test-jpeg.yml  test-lz4.yml  test-lzf.yml  test-zfp.yml  test-zstd.yml
cmake/h5pl/: CMakeLists.txt  COPYING
cmake/libhdf5/: CMakeLists.txt
test/: default_cd_values.json  generate_default_cd_values.py  make_testfile.py  make_testfiles.mjs  make_testfiles.py  test.mjs
